Add details to readme

--- a/docs/departures/getDeparturesForServiceJourney.mdx
+++ b/docs/departures/getDeparturesForServiceJourney.mdx
@@ -29,3 +29,4 @@ An object containing a subset of `RequestInit` options that's applied to the req
 | Key      | Type          | Description                                                                                                                                       |
 | :------- | :------------ | :------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
+| `headers`| `HeadersInit` | Add custom HTTP headers to the fetch request if desired.                                                                                          |
