Rename EnturService to EnturClient and related parts
The SDK is a _client library_, used to consume Entur's services.
It is not a service itself. Therefore it is weird to call it a
service. "Client" is a more commonly used word for this.

Examples of other SDKs using the client term:
* Auth0 (https://github.com/auth0/node-auth0)
* AWS (https://docs.aws.amazon.com/sdk-for-javascript/v3/developer-guide/getting-started-nodejs.html)

--- a/docs/advanced/queryJourneyPlanner.mdx
+++ b/docs/advanced/queryJourneyPlanner.mdx
@@ -38,10 +38,10 @@ An object containing a subset of `RequestInit` options that's applied to the req
 The example below finds lines that stops at the given stop places. Also check this out at [Shamash](https://api.staging.entur.io/journey-planner/v2/ide/?query=%7B%0A%20%20%0A%7D&variables=%7B%0A%20%20%22ids%22%3A%20%5B%22NSR%3AStopPlace%3A4089%22%2C%20%22NSR%3AStopPlace%3A1337%22%5D%0A%7D).
 
 ```typescript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
@@ -61,5 +61,7 @@ const variables = {
     ids: ['NSR:StopPlace:4089', 'NSR:StopPlace:1337'],
 }
 
-service.queryJourneyPlanner(query, variables).then((res) => console.log(res)) // Print out lines servicing these stop places
+enturClient
+    .queryJourneyPlanner(query, variables)
+    .then((res) => console.log(res)) // Print out lines servicing these stop places
 ```
