--- a/docs/nsr/getParkingsForStopPlace.mdx
+++ b/docs/nsr/getParkingsForStopPlace.mdx
@@ -26,16 +26,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const parkings = await service.nsr.getParkingsForStopPlace(
+        const parkings = await enturClient.nsr.getParkingsForStopPlace(
             'NSR:StopPlace:337',
         )
         console.log(parkings)
