--- a/docs/bikes/getBikeRentalStation.mdx
+++ b/docs/bikes/getBikeRentalStation.mdx
@@ -30,16 +30,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const bikeRentalStation = await service.getBikeRentalStation(
+        const bikeRentalStation = await enturClient.getBikeRentalStation(
             'YBE:VehicleSharingParkingArea:368',
         )
         console.log(bikeRentalStation)
