--- a/docs/mobility/getStations.mdx
+++ b/docs/mobility/getStations.mdx
@@ -40,16 +40,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const stations = await service.mobility.getStations({
+        const stations = await enturClient.mobility.getStations({
             lat: 59.95,
             lon: 10.75,
             range: 200,
