--- a/docs/mobility/getVehicles.mdx
+++ b/docs/mobility/getVehicles.mdx
@@ -43,16 +43,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const vehicles = await service.mobility.getVehicles({
+        const vehicles = await enturClient.mobility.getVehicles({
             lat: 59.95,
             lon: 10.75,
             range: 200,
