--- a/docs/nsr/getFareZone.mdx
+++ b/docs/nsr/getFareZone.mdx
@@ -24,16 +24,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const fareZone = await service.nsr.getFareZone('MOR:FareZone:411')
+        const fareZone = await enturClient.nsr.getFareZone('MOR:FareZone:411')
         console.log(fareZone)
     } catch (error) {
         console.error(error)
