--- a/docs/nsr/getGroupOfStopPlaces.mdx
+++ b/docs/nsr/getGroupOfStopPlaces.mdx
@@ -24,16 +24,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const groupOfStopPlaces = await service.nsr.getGroupOfStopPlaces(
+        const groupOfStopPlaces = await enturClient.nsr.getGroupOfStopPlaces(
             'NSR:GroupOfStopPlaces:1',
         )
         console.log(groupOfStopPlaces)
