--- a/docs/nsr/getQuay.mdx
+++ b/docs/nsr/getQuay.mdx
@@ -24,16 +24,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const quay = await service.nsr.getQuay('NSR:Quay:1')
+        const quay = await enturClient.nsr.getQuay('NSR:Quay:1')
         console.log(quay)
     } catch (error) {
         console.error(error)
