--- a/docs/nsr/getTariffZone.mdx
+++ b/docs/nsr/getTariffZone.mdx
@@ -24,16 +24,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const tariffZone = await service.nsr.getTariffZone(
+        const tariffZone = await enturClient.nsr.getTariffZone(
             'NOR:TariffZone:4020',
         )
         console.log(tariffZone)
