--- a/docs/places/getNearestPlaces.mdx
+++ b/docs/places/getNearestPlaces.mdx
@@ -41,16 +41,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```typescript
-import createEnturService, { TypeName } from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient, { TypeName } from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const nearbyPlaces = await service.getNearestPlaces(
+        const nearbyPlaces = await enturClient.getNearestPlaces(
             {
                 latitude: 59.911898,
                 longitude: 10.75038,
