--- a/docs/scooters/getScootersByPosition.mdx
+++ b/docs/scooters/getScootersByPosition.mdx
@@ -38,16 +38,16 @@ An object containing a subset of `RequestInit` options that's applied to the req
 ## Example
 
 ```javascript
-import createEnturService from '@entur/sdk'
-// or: const createEnturService = require('@entur/sdk').default
+import createEnturClient from '@entur/sdk'
+// or: const createEnturClient = require('@entur/sdk').default
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const scooters = await service.getScootersByPosition({
+        const scooters = await enturClient.getScootersByPosition({
             latitude: 59.95,
             longitude: 10.75,
             distance: 200,
@@ -70,18 +70,18 @@ We have explicitly typed this by making the `Scooter` type a union type of `Batt
 The utility method `isBatteryScooter` and `isBatteryLevelScooter` can be used to refine the type, as shown in the example below:
 
 ```typescript
-import createEnturService, {
+import createEnturClient, {
     Scooter,
     isBatteryScooter,
     BatteryLevel,
 } from '@entur/sdk'
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function averageBatteryPercentage(): Promise<number> {
-    const scooters = await service.getScootersByPosition({
+    const scooters = await enturClient.getScootersByPosition({
         latitude: 59.909,
         longitude: 10.746,
         limit: 1,
