--- a/docs/utils/convertFeatureToLocation.mdx
+++ b/docs/utils/convertFeatureToLocation.mdx
@@ -14,23 +14,23 @@ So what do you do? You use the handy `convertFeatureToLocation` utility.
 Example usage:
 
 ```javascript
-import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
-// or: const { default: createEnturService, convertFeatureToLocation } = require('@entur/sdk')
+import createEnturClient, { convertFeatureToLocation } from '@entur/sdk'
+// or: const { default: createEnturClient, convertFeatureToLocation } = require('@entur/sdk')
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     const [osloFeatures, bergenFeatures] = await Promise.all([
-        service.getFeatures('Oslo S'),
-        service.getFeatures('Bergen stasjon'),
+        enturClient.getFeatures('Oslo S'),
+        enturClient.getFeatures('Bergen stasjon'),
     ])
 
     const osloLocation = convertFeatureToLocation(osloFeatures[0])
     const bergenLocation = convertFeatureToLocation(bergenFeatures[0])
 
-    const tripPatterns = await service.getTripPatterns({
+    const tripPatterns = await enturClient.getTripPatterns({
         from: osloLocation,
         to: bergenLocation,
     })
