--- a/docs/utils/throttler.mdx
+++ b/docs/utils/throttler.mdx
@@ -12,19 +12,19 @@ To help you with this, we have a `throttler` utility that throttles the requests
 Example usage:
 
 ```javascript
-import createEnturService, {
+import createEnturClient, {
     throttler,
     convertFeatureToLocation,
 } from '@entur/sdk'
-// or: const { default: createEnturService, throttler, convertFeatureToLocation } = require('@entur/sdk')
+// or: const { default: createEnturClient, throttler, convertFeatureToLocation } = require('@entur/sdk')
 
-const service = createEnturService({
+const enturClient = createEnturClient({
     clientName: 'myawesomecompany-myawesomeapp',
 })
 
 async function getTripPatternsForVeryManyDifferentLocations() {
-    const [fromLocation] = await service.getFeatures('Oslo S')
-    const [toLocation] = await service.getFeatures('Drammen stasjon')
+    const [fromLocation] = await enturClient.getFeatures('Oslo S')
+    const [toLocation] = await enturClient.getFeatures('Drammen stasjon')
     const params = {
         searchDate: new Date(),
         from: convertFeatureToLocation(fromLocation),
@@ -37,7 +37,7 @@ async function getTripPatternsForVeryManyDifferentLocations() {
     // We pass the function and the huge list of arguments to the throttler.
     // The resulting list will be in the same order as the arguments passed.
     const tripPatterns = await throttler(
-        (query) => service.getTripPatterns(query),
+        (query) => enturClient.getTripPatterns(query),
         queries,
     )
     console.log('Done!')
