Fix erroneous name and path in doc for geocoder reverse

--- a/docs/geocoder/reverse.mdx
+++ b/docs/geocoder/reverse.mdx
@@ -1,7 +1,7 @@
 ---
-name: getFeaturesReverse
+name: reverse
 menu: Geocoder
-route: /geocoder/getFeaturesReverse
+route: /geocoder/reverse
 ---
 
 # getFeaturesReverse
