Add options param in signatures where it was missing in docs

--- a/docs/bikes/getBikeRentalStation.mdx
+++ b/docs/bikes/getBikeRentalStation.mdx
@@ -7,7 +7,7 @@ route: /bikes/getBikeRentalStation
 # getBikeRentalStation
 
 ```typescript
-(stationId: string) => Promise<BikeRentalStation>
+(stationId: string, options?: RequestOptions) => Promise<BikeRentalStation>
 ```
 
 `getBikeRentalStation` finds a single bike rental station by its ID.
