--- a/docs/places/getQuaysForStopPlace.mdx
+++ b/docs/places/getQuaysForStopPlace.mdx
@@ -7,7 +7,7 @@ route: /places/getQuaysForStopPlace
 # getQuaysForStopPlace
 
 ```typescript
-(stopPlaceId: string, params?: StopPlaceParams) => Promise<Array<Quay>>
+(stopPlaceId: string, params?: StopPlaceParams, options?: RequestOptions) => Promise<Array<Quay>>
 ```
 
 Returns all the quays that belong to a stop place.
