--- a/docs/places/getStopPlace.mdx
+++ b/docs/places/getStopPlace.mdx
@@ -7,7 +7,7 @@ route: /places/getStopPlace
 # getStopPlace
 
 ```typescript
-(id: string, params?: StopPlaceParams) => Promise<StopPlaceDetails>
+(id: string, params?: StopPlaceParams, options?: RequestOptions) => Promise<StopPlaceDetails>
 ```
 
 `getStopPlace` finds the stop place with the given ID.
