--- a/docs/places/getStopPlaceFacilities.mdx
+++ b/docs/places/getStopPlaceFacilities.mdx
@@ -7,7 +7,7 @@ route: /places/getStopPlaceFacilities
 # getStopPlaceFacilities DEPRECATED
 
 ```typescript
-(stopPlaceId: string) => Promise<StopPlaceFacilities>
+(stopPlaceId: string, options?: RequestOptions) => Promise<StopPlaceFacilities>
 ```
 
 This method is deprecated. Please use one or both of these NSR methods instead:
