--- a/docs/bikes/getBikeRentalStations.mdx
+++ b/docs/bikes/getBikeRentalStations.mdx
@@ -7,7 +7,7 @@ route: /bikes/getBikeRentalStations
 # getBikeRentalStations
 
 ```typescript
-(stationIds: Array<string>) => Promise<Array<BikeRentalStation>>
+(stationIds: Array<string>, options?: RequestOptions) => Promise<Array<BikeRentalStation>>
 ```
 
 `getBikeRentalStations` finds multiple bike rental stations according to an array of IDs. The returned array will have the same length and order as the input array, and may contain undefined values if the corresponding ID didn't produce a result.
