--- a/docs/places/getParentStopPlace.mdx
+++ b/docs/places/getParentStopPlace.mdx
@@ -7,7 +7,7 @@ route: /places/getParentStopPlace
 # getParentStopPlace
 
 ```typescript
-(id: string, params?: StopPlaceParams) => Promise<StopPlaceDetails>>
+(id: string, params?: StopPlaceParams, options?: RequestOptions) => Promise<StopPlaceDetails>>
 ```
 
 ## Parameters
