--- a/docs/places/getStopPlaces.mdx
+++ b/docs/places/getStopPlaces.mdx
@@ -7,7 +7,7 @@ route: /places/getStopPlaces
 # getStopPlaces
 
 ```typescript
-(ids: Array<string>, params?: StopPlaceParams) => Promise<Array<StopPlaceDetails | undefined>>
+(ids: Array<string>, params?: StopPlaceParams, options?: RequestOptions) => Promise<Array<StopPlaceDetails | undefined>>
 ```
 
 `getStopPlaces` finds multiple stop places according to an array of IDs. The returned array will have the same order as the input array, and may contain undefined values if the corresponding ID didn't produce a result.
