--- a/docs/travel/findTrips.mdx
+++ b/docs/travel/findTrips.mdx
@@ -7,7 +7,7 @@ route: /travel/findTrips
 # findTrips
 
 ```typescript
-(from: string, to: string, date?: Date | string | number) => Promise<Array<TripPattern>>
+(from: string, to: string, date?: Date | string | number, options?: RequestOptions) => Promise<Array<TripPattern>>
 ```
 
 Finds up to 5 trip patterns from `from` to `to` at the time specified. This is a convenience method, which first tries to find locations for the given `from` and `to` strings before searching for trips between them. If you need more control, see the [`getTripPatterns`](/travel/getTripPatterns) method.
