Fixed typo in docs code example

--- a/docs/bikes/getBikeRentalStations.mdx
+++ b/docs/bikes/getBikeRentalStations.mdx
@@ -43,7 +43,7 @@ async function example() {
             'YBE:VehicleSharingParkingArea:368',
             'YBE:VehicleSharingParkingArea:83',
         ])
-        console.log(bikeRentalStation)
+        console.log(bikeRentalStations)
     } catch (error) {
         console.error(error)
     }
