--- a/docs/bikes/getBikeRentalStations.mdx
+++ b/docs/bikes/getBikeRentalStations.mdx
@@ -41,7 +41,7 @@ async function example() {
     try {
         const bikeRentalStations = await enturClient.getBikeRentalStations([
             'YBE:VehicleSharingParkingArea:368',
-            'YBE:VehicleSharingParkingArea:83',
+            'YOS:VehicleSharingParkingArea:495',
         ])
         console.log(bikeRentalStations)
     } catch (error) {
